--- a/study2/analysis/2_emotion.qmd
+++ b/study2/analysis/2_emotion.qmd
@@ -932,13 +932,13 @@ for(m in c("BAIT_Visual", "BAIT_Text", "BAIT_ExpertAI",
 #| fig-width: 7
 
 pred1 <- rbind(
-  marginaleffects::avg_predictions(m_arousal, by=c("Gender", "StimuliType", "Condition"), newdata = "mean", re.form=NA) |>
+  modelbased::estimate_means(m_arousal, by=c("Gender", "StimuliType", "Condition"), backend = "emmeans") |>
   as.data.frame() |> 
   mutate(Outcome="Arousal"),
-  marginaleffects::avg_predictions(m_enticement, by=c("Gender","StimuliType",  "Condition"), newdata = "mean", re.form=NA) |>
+  modelbased::estimate_means(m_enticement, by=c("Gender","StimuliType",  "Condition"), backend = "emmeans") |>
   as.data.frame() |> 
   mutate(Outcome="Enticement"),
-  marginaleffects::avg_predictions(m_valence, by=c("Gender", "StimuliType", "Condition"), newdata = "mean", re.form=NA) |>
+  modelbased::estimate_means(m_valence, by=c("Gender", "StimuliType", "Condition"), backend = "emmeans") |>
   as.data.frame() |> 
   mutate(Outcome="Valence")
 )
@@ -950,6 +950,12 @@ pred1 <- rbind(
 #                     x=c(1.5, 1.5, 1.5, 1.5, 1.5, 1.5), 
 #                     y = c(0.53, 0.40, 0.6, 0.51, 0.62, 0.58))
 
+stars1b <- data.frame(label=c("*"),
+                    Gender=fct_relevel(c("Male"), "Male"),
+                    Outcome=c("Arousal"),
+                    x=1,
+                    y=0.60)
+
 stars1b <- data.frame(label=c("*","**", "*","*"),
                     Gender=fct_relevel(c("Male", "Male", "Male","Male"), "Male"),
                     Outcome=c("Arousal", "Enticement", "Enticement","Valence"),
@@ -959,20 +965,19 @@ stars1b <- data.frame(label=c("*","**", "*","*"),
 
 p1 <- pred1 |>
   mutate(Gender = fct_relevel(Gender, "Male", "Female")) |> 
-  ggplot(aes(x=StimuliType, y=estimate)) +
+  ggplot(aes(x=StimuliType, y=Proportion)) +
   geom_hline(yintercept=0, color="darkgrey") +
   geom_line(aes(group=Condition, color=Condition), position = position_dodge(width=0.2), alpha=0.8, linewidth=0.4, key_glyph = "path") +
-  geom_pointrange(aes(ymin = conf.low, ymax=conf.high, color=Condition), position = position_dodge(width=0.2), size=0.3) +
-  # geom_text(data=stars1a, aes(x=x, y=y, label=label, color=Condition), hjust=0.5, key_glyph = "blank", size=3) +
-  geom_text(data=stars1b, aes(x=x, y=y, label=label), hjust=0.5, color="#424242", size=3) +
-  # geom_rect(data=data.frame(Type="All trials", estimate=0.1, Gender=as.factor("Male"), Outcome="Arousal"),
-  #           aes(xmin=0.8, xmax=1.2, ymin=0.35, ymax=0.6), color="#8BC34A", alpha=0) +
-  # geom_rect(data=data.frame(Type="All trials", estimate=0.1, Gender=as.factor("Female"), Outcome="Arousal"),
-  #           aes(xmin=0.8, xmax=1.2, ymin=0.3, ymax=0.5), color="#8BC34A", alpha=0) +
+  geom_pointrange(aes(ymin = CI_low, ymax=CI_high, color=Condition), position = position_dodge(width=0.2), size=0.3) +
+  geom_text(data=stars1b, aes(x=x, y=y, label=label), hjust=0.5, color="#424242", size=6) +
+  geom_rect(data=data.frame(StimuliType = "Individual", Proportion=0.1, Gender=as.factor("Male"), Outcome="Arousal"),
+            aes(xmin=0.8, xmax=1.2, ymin=0.35, ymax=0.7), color="#8BC34A", alpha=0, ) +
+  geom_rect(data=data.frame(StimuliType = "Individual",Proportion=0.1, Gender=as.factor("Female"), Outcome="Arousal"),
+            aes(xmin=0.8, xmax=1.2, ymin=0.2, ymax=0.5), color="#8BC34A", alpha=0) +
   facet_grid(Outcome~Gender, switch="y", scales ="free") +
   scale_y_continuous(limits=c(0, 1), labels=scales::percent) +
   scale_color_manual(values=c("AI-Generated"="#2196F3", "Photograph"="#F44336")) +
-  theme_bw() +
+  theme_minimal() +
   theme(axis.title.y = element_blank(),
         axis.title.x = element_blank(),
         axis.text.y = element_text(size = 8),
