--- a/study2/analysis/2_emotion.qmd
+++ b/study2/analysis/2_emotion.qmd
@@ -989,7 +989,56 @@ p1
 
 ```
 
+```{r}
+#| fig-height: 7
+#| fig-width: 7
 
+pred1 <- modelbased::estimate_means(m_arousal, by=c("Gender", "StimuliType", "Condition"), backend = "emmeans") |>
+  as.data.frame() |> 
+  mutate(Outcome="Arousal")
+
+# stars1a <- data.frame(label=c("**","***", "**", "***", "***", "***"),
+#                     Gender=fct_relevel(c("Male", "Female", "Male", "Female", "Male", "Female"), "Male"),
+#                     Outcome=c("Arousal","Arousal", "Enticement", "Enticement", "Valence", "Valence"),
+#                     Condition=c("Photograph", "Photograph", "Photograph", "Photograph", "Photograph", "Photograph"), 
+#                     x=c(1.5, 1.5, 1.5, 1.5, 1.5, 1.5), 
+#                     y = c(0.53, 0.40, 0.6, 0.51, 0.62, 0.58))
+
+stars1b <- data.frame(label=c("*"),
+                    Gender=fct_relevel(c("Male")),
+                    Outcome=c("Arousal"),
+                    x=1,
+                    y=0.60)
+
+
+pred1 |>
+  mutate(Gender = fct_relevel(Gender, "Male", "Female")) |> 
+  ggplot(aes(x=StimuliType, y=Proportion)) +
+  geom_hline(yintercept=0, color="darkgrey") +
+  geom_line(aes(group=Condition, color=Condition), position = position_dodge(width=0.3), alpha=0.8, linewidth=1, key_glyph = "path") +
+  geom_pointrange(aes(ymin = CI_low, ymax=CI_high, color=Condition), position = position_dodge(width=0.3), size=0.6) +
+  geom_text(data=stars1b, aes(x=x, y=y, label=label), hjust=0.5, color="#424242", size=6) +
+  # geom_rect(data=data.frame(StimuliType = "Individual", Proportion=0.1, Gender=as.factor("Male"), Outcome="Arousal"),
+  #           aes(xmin=0.8, xmax=1.2, ymin=0.35, ymax=0.7), color="#8BC34A", alpha=0, linewidth = 1) +
+  # geom_rect(data=data.frame(StimuliType = "Individual",Proportion=0.1, Gender=as.factor("Female"), Outcome="Arousal"),
+  #           aes(xmin=0.8, xmax=1.2, ymin=0.2, ymax=0.5), color="#8BC34A", alpha=0, linewidth = 1) +
+  facet_grid(Outcome~Gender, switch="y", scales ="free") +
+  scale_y_continuous(limits=c(0, 1), labels=scales::percent, expand = c(0,0)) +
+  scale_color_manual(values=c("AI-Generated"="#2196F3", "Photograph"="#F44336")) +
+  theme_bw() +
+  theme(axis.title.y = element_blank(),
+        axis.title.x = element_blank(),
+        axis.text.y = element_text(size = 8),
+        strip.placement = "outside",
+        strip.background.x = element_rect(fill=c("#1C2133"), color=NA),
+        strip.text.x = element_text(size = 12, color = "White", face = "bold"),
+        strip.text.y = element_blank(),
+        axis.text.x = element_text(size=12, color="black", face = "bold"),
+        legend.text = element_text(size = 12),
+        legend.position = "bottom") +
+  labs(color="Images presented as:")
+
+```
 
 ```{r}
 m1 <- glmmTMB::glmmTMB(Arousal ~ Gender / Condition + (Condition | Participant) + (1|Stimulus),data = df, 
